<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/firstNumLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/firstNumLabelStr"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/firstNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/firstNumHint"
            android:inputType="numberSigned|numberDecimal"
            android:textSize="24sp"
            android:autofillHints="" />

        <TextView
            android:id="@+id/secondNumLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/secondNumLabelStr"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/secondNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/firstNumHint"
            android:inputType="numberSigned|numberDecimal"
            android:textSize="24sp"
            android:autofillHints="" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintButtonLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/addButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="performAddition"
                android:text="@string/addStr"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/subButton"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/subButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="performSubtraction"
                android:text="@string/subStr"
                android:textSize="24sp"
                app:layout_constraintEnd_toStartOf="@+id/divButton"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/addButton"
                app:layout_constraintTop_toTopOf="@+id/addButton" />

            <Button
                android:id="@+id/multButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="performDivision"
                android:text="@string/divStr"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/divButton"
                app:layout_constraintTop_toTopOf="@+id/divButton" />

            <Button
                android:id="@+id/divButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="performMultiplication"
                android:text="@string/multStr"
                android:textSize="24sp"
                app:layout_constraintEnd_toStartOf="@+id/multButton"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/subButton"
                app:layout_constraintTop_toTopOf="@+id/subButton" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/answerLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answerLabelStr"
            android:textSize="30sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>